# rmcs-api-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  example.env
root/: example.env
src/: auth_server.rs  lib.rs  main.rs  resource_server.rs  test_auth_server.rs  test_resource_server.rs
src/auth/: api.rs  auth.rs  mod.rs  profile.rs  role.rs  token.rs  user.rs
src/resource/: buffer.rs  data.rs  device.rs  group.rs  log.rs  mod.rs  model.rs  set.rs  slice.rs
src/utility/: auth.rs  config.rs  interceptor.rs  mod.rs  root.rs  test.rs  token.rs  validator.rs
tests/: test.rs
