[package]
name = "rmcs-api-server"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "auth_server"
path = "src/auth_server.rs"

[[bin]]
name = "resource_server"
path = "src/resource_server.rs"

[[bin]]
name = "test_auth_server"
path = "src/test_auth_server.rs"

[[bin]]
name = "test_resource_server"
path = "src/test_resource_server.rs"

[dependencies]
rmcs-auth-api = { path = "../rmcs-auth-api/rust" }
rmcs-auth-db = { path = "../rmcs-auth-db" }
rmcs-resource-api = { path = "../rmcs-resource-api/rust" }
rmcs-resource-db = { path = "../rmcs-resource-db" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros"] }
prost = "0.13.5"
tonic = "0.13.1"
tonic-reflection = "0.13.1"
tonic-web = "0.13.1"
dotenvy = "0.15.7"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "iana-time-zone", "oldtime", "std"] }
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.8.5"
serde = "1.0.219"
rsa = "0.9.8"
pkcs8 = "0.10.2"
spki = "0.7.3"
sha2 = "0.10.8"
argon2 = "0.5.3"
jsonwebtoken = { version = "9.3.1", default-features = false }
clap = { version = "4.5.40", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"
