[package]
name = "rmcs-api-server"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "auth_server"
path = "src/auth_server.rs"

[[bin]]
name = "resource_server"
path = "src/resource_server.rs"

[[bin]]
name = "test_auth_server"
path = "src/test_auth_server.rs"

[[bin]]
name = "test_resource_server"
path = "src/test_resource_server.rs"

[dependencies]
rmcs-auth-api = { path = "../rmcs-auth-api/rust" }
rmcs-auth-db = { path = "../rmcs-auth-db" }
rmcs-resource-api = { path = "../rmcs-resource-api/rust" }
rmcs-resource-db = { path = "../rmcs-resource-db" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14.1"
tonic = "0.14.2"
tonic-reflection = "0.14.2"
tonic-web = "0.14.2"
dotenvy = "0.15.7"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "iana-time-zone", "oldtime", "std"] }
uuid = { version = "1.18.1", features = ["v4"] }
rand = "0.8.5"
serde = "1.0.228"
rsa = "0.9.9"
pkcs8 = "0.10.2"
spki = "0.7.3"
sha2 = "0.10.9"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"]}
clap = { version = "4.5.51", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"
